Update support.html with correct email id

--- a/support.html
+++ b/support.html
@@ -56,7 +56,7 @@
     <h2>📬 Contact Us</h2>
     <p>If you need further assistance, please reach out:</p>
     <ul>
-      <li><strong>Email:</strong> <a href="mailto:your-email@example.com">your-email@example.com</a></li>
+      <li><strong>Email:</strong> <a href="mailto:abhishekkr@gmail.com">abhishekkr@gmail.com</a></li>
       <li><strong>Subject:</strong> <em>PickleNote App Support</em></li>
     </ul>
     <p>We typically respond within 24–48 hours.</p>
