Update privacy.html with tracking info

--- a/privacy.html
+++ b/privacy.html
@@ -2,98 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy – PickleNote</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      max-width: 700px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-      background: #fefefe;
-      color: #333;
-      line-height: 1.6;
-    }
-    h1 {
-      color: #2c3e50;
-      margin-bottom: 1rem;
-    }
-    h2 {
-      margin-top: 2rem;
-      color: #34495e;
-    }
-    a {
-      color: #007acc;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    hr {
-      margin: 2rem 0;
-      border: none;
-      border-top: 1px solid #ddd;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Privacy Policy - PickleNote</title>
 </head>
 <body>
   <h1>Privacy Policy for PickleNote</h1>
-
   <p><strong>Effective Date:</strong> June 5, 2025</p>
 
   <p>PickleNote ("we", "our", or "us") is committed to protecting your privacy. This Privacy Policy explains how our mobile application collects, uses, and discloses information.</p>
 
-  <hr />
-
   <h2>1. Information We Collect</h2>
-  <p>We do not collect personal information directly. However, we use <strong>third-party services</strong>, such as <strong>Google AdMob</strong>, that may collect and use data as described below.</p>
+  <p>We do not collect personal information directly. However, we use third-party services, such as Google AdMob, that may collect and use data as described below.</p>
 
   <h2>2. Advertising and Third-Party Data Collection</h2>
-  <p>We use <strong>Google AdMob</strong> to display ads in our app. AdMob may collect the following types of information:</p>
+  <p>We use Google AdMob to display ads in our app. AdMob and its partners may collect and use information such as:</p>
   <ul>
-    <li>Device details (model, OS version, language)</li>
+    <li>Device information (model, OS version, language)</li>
     <li>IP-based location (approximate)</li>
-    <li>Interaction with ads (views, clicks)</li>
-    <li>User interests (for personalized ads, where applicable)</li>
+    <li>Ad interactions (views, clicks)</li>
+    <li>User interests (for personalized and behavioral ads)</li>
   </ul>
-  <p>Learn more here:<br />
-    <a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noopener noreferrer">
-      https://policies.google.com/technologies/partner-sites
-    </a>
+
+  <p>This data may be used for <strong>tracking purposes</strong> as defined by Apple’s AppTrackingTransparency framework. Users may be prompted for permission to allow tracking, in compliance with iOS policies.</p>
+
+  <p>More about how Google uses data: 
+    <a href="https://policies.google.com/technologies/partner-sites" target="_blank">Google Partner Sites Policy</a>.
   </p>
-  <p>In compliance with laws (e.g., GDPR, CCPA), users may be shown a consent prompt regarding personalized ads.</p>
 
   <h2>3. App Permissions and Features</h2>
-  <p>PickleNote may request the following permissions or access:</p>
+  <p>PickleNote may request access to the following features:</p>
   <ul>
-    <li><strong>Audio Playback</strong> – The app plays short MP3 sound files when users press buttons. This audio is stored locally and does not involve any recording or data collection.</li>
-    <li><strong>Storage/Network Access</strong> – Used to store and load app assets, display ads, and ensure functionality.</li>
+    <li><strong>Audio Playback:</strong> Plays short MP3 files stored locally. No audio recording or microphone usage occurs.</li>
+    <li><strong>Storage/Network Access:</strong> Required to load app assets and serve ads.</li>
   </ul>
-  <p>We do <strong>not</strong> access your camera, microphone, contacts, or precise location.</p>
+  <p>We do not access your camera, microphone, contacts, or precise location.</p>
 
-  <h2>4. Children's Privacy</h2>
-  <p>PickleNote is intended for general audiences and is <strong>not directed at children under the age of 13</strong>. We do not knowingly collect or store personal information from children. If you believe your child has submitted personal data, contact us to remove it.</p>
+  <h2>4. Tracking and Privacy Controls</h2>
+  <p>To comply with privacy regulations (e.g., GDPR, CCPA, and Apple's ATT), you may see a prompt requesting permission to track your activity across apps and websites for ad personalization.</p>
 
-  <h2>5. Data Sharing</h2>
-  <p>We do not share any data with third parties directly. However, data collected through <strong>Google AdMob</strong> may be used by Google and its partners to serve ads, in accordance with their privacy policies.</p>
+  <h2>5. Children’s Privacy</h2>
+  <p>This app is not intended for children under 13. We do not knowingly collect personal information from children. If you believe your child has submitted personal data, please contact us to have it removed.</p>
 
-  <h2>6. Managing Your Privacy</h2>
-  <p>You can manage your ad preferences or opt out of personalized ads via:</p>
+  <h2>6. Data Sharing</h2>
+  <p>We do not share user data directly. However, data collected by Google AdMob may be shared with third parties for ad delivery and tracking, under their respective privacy policies.</p>
+
+  <h2>7. Managing Your Privacy</h2>
+  <p>You can manage or limit ad tracking via:</p>
   <ul>
-    <li>Device settings (Ads &gt; Reset or limit ad tracking)</li>
-    <li>Google Ads Settings: <a href="https://adssettings.google.com" target="_blank" rel="noopener noreferrer">https://adssettings.google.com</a></li>
+    <li>Device Settings > Privacy > Tracking (on iOS)</li>
+    <li>Google Ads Settings: 
+      <a href="https://adssettings.google.com" target="_blank">https://adssettings.google.com</a>
+    </li>
+    <li>Limit ad personalization or reset ad ID on Android</li>
   </ul>
 
-  <h2>7. Contact Us</h2>
+  <h2>8. Contact Us</h2>
   <p>If you have any questions about this Privacy Policy, please contact us:</p>
   <ul>
-    <li><strong>Email:</strong> <a href="mailto:your-email@example.com">your-email@example.com</a></li>
-    <li><strong>Developer/Company Name:</strong> Your Name or Company</li>
-    <li><strong>Location:</strong> City, Country</li>
+    <li><strong>Email:</strong> abhishekkr@gmail.com</li>
+    <li><strong>Developer:</strong> Abhishek Kalai Raghavendra</li>
+    <li><strong>Location:</strong> India</li>
   </ul>
 
-  <hr />
-
-  <p><em>Last updated: June 5, 2025</em></p>
+  <p><strong>Last updated:</strong> June 5, 2025</p>
 </body>
 </html>
